<resources>
    <string name="app_name">GP 497</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="register_signUp">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="register_SignUp">REGISTER</string>

</resources>